Mudanças e Melhorias no Core